Many Performance Improvements (#47)
* Corrected documentation for `OrderedXYSeries`

* Rename local variable in SeriesUtils.java to better describe its contents.

Android studio also replaced wildcards in imports probably to match AOSP style guides https://source.android.com/source/code-style#fully-qualify-imports

* Implements `toString` methods for `RectRegion` and related classes for easier debugging.

* Refactoring only - reduced nesting in XYConstraints.java

* Rename local variable in SeriesUtils.java to better describe its contents.

Android studio also replaced wildcards in imports probably to match AOSP style guides https://source.android.com/source/code-style#fully-qualify-imports

* Implements `toString` methods for `RectRegion` and related classes for easier debugging.

* Refactoring only - reduced nesting in XYConstraints.java

* Added shortcut to XYConstraints.java#contains for situations where there are no defined constraints. This avoids getting the double value of two numbers.

* Removed redundant array creation in Redrawer.java

* Replaced manual array copy operations with possibly faster method (will vary by android device)

* Fixed `FastLineAndPointRenderer` allocating many extra instances of `PointF` which hurts android performance.

* Prevent creation of a new instance of `FastNumber` when setting the min or max of a `Region`

* Replaced empty string concatenation with more efficient `String.valueOf`

* Replaced HashMaps with EnumMaps where possible in XYGraphWidget.java

* Replaced stringbuffer with string in XYConstraints.java#toString()

* Replaced HashSet with EnumSet

* Replace float new instance with Float.valueOf

* Replaced StringBuffer with StringBuilder

* set initial array sizes

* Removed the primative cache from FastNumber#equals and FastNumber#hashcode() and made the number field final

* Made methods static where possible

* Add Unit Tests for FastNumber.java#equals and FastNumber.jav